Bug 33816 - Impress freeze when using Apple Remote Control
Summary: Impress freeze when using Apple Remote Control
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.3.0 release
Hardware: x86-64 (AMD64) macOS (All)
: medium major
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-01 10:27 UTC by Florian Effenberger
Modified: 2016-08-15 12:40 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Apple stack trace on Impress hang with AppleMote (184.99 KB, text/plain)
2011-05-02 02:04 UTC, Alex Thurgood
Details
valgrind output after loading Impress file, then pressing play on AppleMote (88.93 KB, text/plain)
2011-10-31 04:32 UTC, Alex Thurgood
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Florian Effenberger 2011-02-01 10:27:56 UTC
From time to time, Impress freezes when using the Apple Remote Control.

Open up Impress and start a full screen presentation. Upon pressing |>> (right) on the control, the system freezes, grabs lots of CPU cycles, and the beachball is showing. I have to hard terminate LibreOffice in order to get back to the system.

Most of the time, after the first crash, things work. Another workaround is to start the presentation, press Space to go to the next slide, and then things work with the remote as well.

IIRC, the problem occured when the fix for the changes Apple Remote Code was added back in OOo 3.1/3.2.

I only tried with activated Presenter Console, and with the old (white) Apple Remote Control.
Comment 1 Thorsten Behrens (allotropia) 2011-05-02 00:54:26 UTC
Let me check
Comment 2 Alex Thurgood 2011-05-02 02:03:14 UTC
@ALL :

I can confirm on Mac OSX 10.6.7, with LibO 3.4b3.
I used the white AppleRemote (I don't have a newer one). Systematic hang as soon as any of the buttons are pressed when LibO is open. I am attaching an Apple stack trace.


Alex
Comment 3 Alex Thurgood 2011-05-02 02:04:25 UTC
Created attachment 46238 [details]
Apple stack trace on Impress hang with AppleMote

Enclosing Apple stack trace.
Comment 4 Florian Effenberger 2011-05-02 02:06:12 UTC
When I do the first slide transition with the keyboard, and use the Apple Remote afterwards, it works.

Would be good to know if the symptoms also occur with the newer (silver/gray) Apple remote. IMHO, the problems started when a fix for the newer remote was introduced in OOo 3.x, so I assume the newer one sends different signals than the older one.
Comment 5 Alex Thurgood 2011-05-02 02:12:47 UTC
I can also confirm that the systematic hang only appears to occur when the
presentation is started immediately with the Applemote.

If, as Florian noted, one of the keys is used to start the presenation, then
the remote works correctly and LibO does not crash, at least I could not get it
to crash. I can pop in and out of slideshow mode, go forward, back, start, end,
etc without problem.

Alex
Comment 6 Alex Thurgood 2011-05-02 02:20:27 UTC
Unfortunately, I don't have a newer AppleMote, even though my Macbook Pro is only a year or so old, it came with the old style white one.


Alex
Comment 7 Raphael Bircher 2011-05-02 06:19:58 UTC
Tested with OOo 3.4 snapshot and a 3.2 m15, it works fine at both. So this bug is libreOffice specific
Comment 8 Raphael Bircher 2011-05-02 06:21:44 UTC
(In reply to comment #7)
> Tested with OOo 3.4 snapshot and a 3.2 m15, it works fine at both. So this bug
> is libreOffice specific

Forget my comment, wrong bug ;-)
Comment 9 Joost Egelie 2011-06-17 23:43:28 UTC
This happens in Writer too. As soon as I touch any button on the white Apple Remote when LibreOffice Writer is in the foreground, Writer gives the spinning beachball..

Annoying, since I only wanted to controll iTunes which was running in the background.

OpenOffice Writer 3.3.0 just doesn't respond to the Remote, and doesn't pipe the commands to iTunes either. At first I thought my Remote was broken, but now I know bot Writer apps just catch the Remote commands.

I'm on Leopard 10.5.8, with a white 2006 model Apple Remote. Libre Office v. 3.4.0.

Feature request: an option to ignore Apple Remote commands, so I can still controll background apps.
Comment 10 Don't use this account, use tml@iki.fi 2011-10-31 00:35:31 UTC
Is anybody actually capable of using the Apple Remote successfully with a current (i.e. 3.4.x) LibreOffice? If not, should we just disable the Apple Remote code until somebody feels like working on it? Does it work better in NeoOffice? Should we just tell our Mac uses to use NeoOffice instead if they want a more Mac-like free office suite?
Comment 11 Florian Effenberger 2011-10-31 03:19:19 UTC
Well, for me, it works when I - seriously - am changing the first slide with the keyboard. As soon as the second slide is loaded, I can perfectly fine use the Apple Remote. The problem only occurs when the first slide change already occurs using the Apple Remote, and then in about 50-75%, so not reliably reproducible.

I am using the older, white Apple Remote, if that helps. Have no access to a newer one (metal-gray).
Comment 12 Alex Thurgood 2011-10-31 03:50:09 UTC
@Tor :

You jest surely ? How about we put up a notice on our web site telling people to use NeoOffice because we're going to just take stuff out that worked previously, and tell our users to stuff the Mac integration ? Sigh. Why not make it a compile time option, like the binfilters ?

And yes, my white AppleMote works fine for me on OSX 10.6.8 with :

NeoOffice 3.1.2p8
NeoOffice 3.2p5
OpenOffice.org 3.2.1
OpenOffice.org 3.3.0
OpenOffice.org 3.4.0

However, it causes all of the following to freeze, requiring forced kill :
LibreOffice 3.3.4
LibreOffice 3.4.3
LibreOffice 3.5 (master build from 28/10/2011)


In each case, I loaded an Impress file. The file opened in Edit Mode. I then pressed Play on the AppleMote. LO hangs systematically on any first button push with my white AppleMote. It doesn't have to be the play button, any single button push seems to cause the freeze to happen.



Alex
Comment 13 Don't use this account, use tml@iki.fi 2011-10-31 04:24:28 UTC
Whatever.
Comment 14 Alex Thurgood 2011-10-31 04:32:08 UTC
Created attachment 52941 [details]
valgrind output after loading Impress file, then pressing play on AppleMote

Did a simple valgrind on it. What do you, it doesn't hang, but it takes for ever to actually display the presentation. Have enclosed the output of valgrind from the initial button press of the Play button, through Next page button presses, until I escaped and closed the program.


Don't ask me what it means coz I don't know.

Alex
Comment 15 Florian Effenberger 2011-11-04 05:10:41 UTC
I now tried with a new Apple remote (the metal style ones), same problem. Upon starting the presentation, the system freezes. The only way of getting control again was - seriously - to SSH in from another box and do a killall soffice. It was not even possible to use cmd, alt, escape to kill the task.

I consider this a major issue, since it freezes the whole system.
Comment 16 Florian Effenberger 2011-11-04 07:02:34 UTC
In addition, it seems that with the new (metal) remote control, starting the presentation with "Play" doesn't work, whereas it does with the old (white) one.

I have both here, and can help debugging if someone tells me how :)
Comment 17 Uwe Altmann 2011-11-15 02:23:58 UTC
Eric Bachard wrote a fix for this. It's integrated in AOO "head" and works fine on 10.6 and 10.5 with the white remote (what is all I can test).
(fyi: https://issues.apache.org/ooo/show_bug.cgi?id=118593 )
Comment 18 Thorsten Behrens (allotropia) 2011-11-15 04:50:22 UTC
(In reply to comment #17)
> Eric Bachard wrote a fix for this. It's integrated in AOO "head" and works fine
> on 10.6 and 10.5 with the white remote (what is all I can test).
> (fyi: https://issues.apache.org/ooo/show_bug.cgi?id=118593 )
>
The fix adds the button event for the silver remote - I don't see anything there that would explain why it freezes LibO & does not for OOo.
Comment 19 Florian Effenberger 2011-11-17 07:43:27 UTC
With the newer (brushed metal) remote control, things seem to be worse. I am pretty sure that using LibreOffice 3.3 on 10.6, I at least could work around that bug with the older (white) remote control, when I made the first slide transition with a keyboard.

Using the new remote control with 3.4.4 on 10.7, this trick doesn't work anymore. The system freezes until I kill the soffice process with a remote SSH.

So either it's a problem of 10.7, of 3.4.4, or of the new remote control, or any combination thereof.

I really would appreciate if we could fix that, it simply is a big big PITA. If I can help with debugging, let me know.
Comment 20 Björn Michaelsen 2011-12-23 11:52:35 UTC Comment hidden (obsolete)
Comment 21 Florian Effenberger 2011-12-23 11:53:53 UTC
Can confirm it occurs with 3.5
Comment 22 Thorsten Behrens (allotropia) 2012-01-05 15:47:47 UTC
Fixed in master and -3-5 - a rather random looping over active frames sometimes went off into undefined memory.
Comment 23 How can I remove my account? 2016-08-15 12:40:12 UTC
Just out of interest, has anybody confirmed whether the Apple Remote (or even the newer Siri Remote) works with more current LibreOffice versions any longer?