Fix fdo#33816 - don't loop infinitely when using Apple Remote

Removed erratic loop condition - we simply want to check if any
frame has fullscreen flag set.